<resources>
    <string name="app_name">PolarHRDemo</string>
    <string name="test_button">Test</string>
    <string name="hr_button">HeartRate</string>
    <string name="add_group_button">Add Group</string>
    <string name="delete_group_button">Delete Group</string>
    <string name="add_device_button">Add Device</string>
    <string name="export_data_button">Export Data</string>
    <string name="start_record_button">Start R</string>
    <string name="stop_record_button">Stop R</string>
    <string name="start_period_button">Start P</string>
    <string name="end_period_button">End P</string>
    <string name="connecting">Connecting to device</string>
    <string name="connected">Connected!</string>
    <string name="device_id">device_id</string>
    <string name="group_name">Group ID</string>
    <string name="connection_failed">Fail to connect to device</string>
    <string name="test_mode_switch">Test Mode</string>
    <string name="settings_button">Settings</string>
    <string name="button_change_max_hr">Change</string>
    <string name="record_status">Recording:False</string>
    <string name="period_status">Period:None</string>
    <string name="delete_device_button">Delete Device</string>
    <string name="button_change_zone">Change Lower Boundaries</string>
    <string name="hr_range_title">HR, /sec</string>
    <string name="hr_title">HR vs. Time (for 5 min)</string>
    <string name="button_zone_settings">Zone Settings</string>
    <string name="button_hr_settings">HeartRate Settings</string>
    <string name="button_hrv_settings">HRV Settings</string>
    <string name="button_trimp_settings">TRIMP Settings</string>
    <string name="hr_switch">Show HeartRate All</string>
    <string name="heart_rate_switch">Show HeartRate</string>
    <string name="hr_percentage_switch">Show HR Percentage</string>
    <string name="hr_zone_switch">Show HR Zone</string>
    <string name="hrv_switch">Show HRV All</string>
    <string name="sdrr_switch">Show SDRR</string>
    <string name="pnn50_switch">Show pNN50</string>
    <string name="rmssd_switch">Show RMSSD</string>
    <string name="trimp_switch">Show TRIMP All</string>
    <string name="banister_switch">Show Banister\'s TRIMP</string>
    <string name="edward_switch">Show Edward\'s TRIMP</string>
    <string name="lucia_switch">Show Lucia\'s TRIMP</string>
    <string name="stango_switch">Show Stango\'s TRIMP</string>
    <string name="custom_switch">Show Custom TRIMP</string>
    <string name="scan_button">Scan Devices</string>
    <string name="scan_page_button">Scan</string>
    <string name="copy_device_id_button">Copy ID</string>
    <string name="assign_device_to_player_button">Assign To Player</string>
    <string name="change_player_device_id_button">Change</string>
    <string name="clear_player_device_id_button">Clear</string>
    <string name="player_button">Players</string>
    <string name="change_coefficient_button">Change</string>
</resources>