<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/addDeviceAndExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textViewGroupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/group_name" />

        <Button
            android:id="@+id/buttonAddDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickAddDeviceButton"
            android:tag="1"
            android:text="@string/add_device_button" />

        <Button
            android:id="@+id/buttonExportData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickExportGroupDataButton"
            android:tag="1"
            android:text="@string/export_data_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recordAndPeriodControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDeviceAndExport">

        <Button
            android:id="@+id/buttonStartRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStartGroupRecordButton"
            android:tag="1"
            android:text="@string/start_record_button" />

        <Button
            android:id="@+id/buttonStopRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStopGroupRecordButton"
            android:tag="1"
            android:text="@string/stop_record_button" />

        <Button
            android:id="@+id/buttonStartPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStartGroupPeriodButton"
            android:tag="1"
            android:text="@string/start_period_button" />

        <Button
            android:id="@+id/buttonEndPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickEndGroupPeriodButton"
            android:tag="1"
            android:text="@string/end_period_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recordAndPeriodStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordAndPeriodControl">

        <TextView
            android:id="@+id/textViewRecordStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/record_status"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewPeriodStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/period_status"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDeviceInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/recordAndPeriodStatus"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>